print() method overriden by FancyDocument